JPMC_training/jpmc-terraform-training/exercises/exercise_7/podsprod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: prod
  labels:
    type: monitoring
spec:
  containers:
  - name: pod1-container
    image: nginx
 
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  namespace: prod
spec:
  containers:
  - name: pod2-container
    image: nginx
