JPMC_training/jpmc-terraform-training/exercises/exercise_7/network-policy.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:

  name: pod-network-policy

  namespace: test

spec:

  podSelector:

    matchLabels:

      app: pod1

  policyTypes:

  - Ingress

  ingress:

  - from:

    - podSelector:

        matchLabels:

          app: pod2

    ports:

    - protocol: TCP

      port: 80
